--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -1,168 +1,210 @@
-.checkin-wrapper
-    margin 5%
-    .title
-        list-style none
-        margin 0
-        display flex
-        justify-content center
-        font-size 25px
-        button
-            position absolute
-            cursor pointer
-            text-decoration none
-            display block
-            margin-top 100px
-            margin-left -185px
-            padding 5px
-            background #1d8dbf
-            color #fff
-            border-radius 0.5rem
-            font-size 20px
-            &:hover
-                background #1d6dbf
-    h1
-        span
-            font-size 50px
-            border-bottom 1px solid #000
-    .accordion
-        -webkit-box-shadow 0px 75px 35px -55px rgba(10, 30, 65, 0.6)
-        -moz-box-shadow 0px 75px 35px -55px rgba(10, 30, 65, 0.6)
-        box-shadow 0px 75px 35px -55px rgba(10, 30, 65, 0.6)
-        font-family Arial, Helvetica, sans-serif
-        border-color #adadad
-        border-style solid
-        border-width 1px
-        border-radius 10px
-        margin 0 auto
-        height 450px
-        width 1042px
-        margin-top 70px
-        overflow hidden
-        & > ul
-            margin 0
-            padding 0
-            list-style none
-            width 101%
-            & > li
-                background-color #adadad
-                margin-right -650px
-                margin-bottom 0px
-    .accordion > ul > li,
-    .accordion-title,
-    .accordion-content,
-    .accordion-separator
-        float left
-    .accordion-select
-        cursor pointer
-        position absolute
-        opacity 0
-        top 0
-        left 0
-        margin 0
-        z-index 1
-        &:checked
-            & ~ .accordion-separator
-                margin-right 650px
-                margin-bottom 0px
-    .accordion-title,
-    .accordion-select
-        background-color #4d4d4d
-        color #fff
-        width 55px
-        height 450px
-        font-size 30px
-    .accordion-title
-        span
-            margin-bottom 28px
-            margin-left 20px
-            transform rotate(-90deg)
-            -o-transform rotate(-90deg)
-            -moz-transform rotate(-90deg)
-            -webkit-transform rotate(-90deg)
-            -ms-writing-mode lr-bt
-            margin-left 0px
-            line-height 55px
-            display block
-            position absolute
-            bottom 0px
-            width 100%
-            white-space nowrap
-    .accordion-select:hover ~ .accordion-title,
-    .accordion-select:checked ~ .accordion-title
-        background-color #808080
-    .accordion-content
-        background-color #f5f2f0
-        color #4c5157
-        height 398px
-        width 598px
-        padding 26px
-        position relative
-        overflow auto
-    .accordion-title,
-    .accordion-select:checked ~ .accordion-content
-        margin-right 1px
-        margin-bottom 1px
-    .accordion > ul > li,
-    .accordion-title
-        position relative
-    .accordion-separator
-        transition margin 0.3s ease 0.1s
-        -o-transition margin 0.3s ease 0.1s
-        -moz-transition margin 0.3s ease 0.1s
-        -webkit-transition margin 0.3s ease 0.1s
-    .content
-        list-style none
-        display flex
-        justify-content space-between
-        margin-top 20px
-        font-size 28px
-    .qq
-        a
-            display flex
-            text-align center
-            text-decoration none
-            margin-left 10px
-            margin-right 10px
-            color #4c5157
-    .switch
-        position relative
-        display inline-block
-        width 60px
-        height 34px
-        input
-            display none
-    .slider
-        position absolute
-        cursor pointer
-        top 0
-        left 0
-        right 0
-        bottom 0
-        background-color #ccc
-        -webkit-transition 0.4s
-        transition 0.4s
-        &:before
-            position absolute
-            content ""
-            height 26px
-            width 26px
-            left 4px
-            bottom 4px
-            background-color #fff
-            -webkit-transition 0.4s
-            transition 0.4s
-        &.round
-            border-radius 34px
-            &:before
-                border-radius 50%
-    input
-        &:checked
-            & + .slider
-                background-color #1d8dbf
-                &:before
-                    -webkit-transform translateX(26px)
-                    -ms-transform translateX(26px)
-                    transform translateX(26px)
-        &:focus
-            & + .slider
-                box-shadow 0 0 1px #1d6dbf
+.checkins-wrapper
+    margin: 5%;
+    li {
+        list-style: none;
+    }
+
+    /* HEADER */
+    .checkins-header {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+    }
+
+    .header-list h1 {
+        border-bottom: 1px solid black;
+    }
+
+    .header-list button {
+        font-size: 22px;
+        padding: 5px;
+        border-radius: 10px;
+        cursor: pointer;
+        background-color: #1d8dbf;
+    }
+
+    .header-list button:hover {
+        background-color: #27bcff;
+    }
+
+    /* ACCORDION */
+    .checkins-accordion {
+        max-width: 690px;
+        margin: 0 auto;
+        margin-top: 40px;
+    }
+
+    input[name="week"] {
+        display: none;
+    }
+
+    section {
+        font-size: 18px;
+        border: 1px solid #adadad;
+        border-radius: 10px;
+        background: #f5f5f5;
+        overflow: hidden; /*TODO: or set overflow:auto and height:450px*/
+        //height: 450px;
+    }
+
+    section > label {
+        line-height: 2em;
+        height: 2em;
+        background-color: #808080;
+        font-size: 23px;
+        font-weight: bold;
+        color: #212121;
+        display: block;
+        text-align: center;
+    }
+
+    .tabs {
+        display: none;
+    }
+
+    .tabs:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    input[id="week-list"]:not(:checked) ~ .tab.all,
+    input[id="monday"]:not(:checked) ~ .tab.mo,
+    input[id="tuesday"]:not(:checked) ~ .tab.tu,
+    input[id="wednesday"]:not(:checked) ~ .tab.we,
+    input[id="thursday"]:not(:checked) ~ .tab.th,
+    input[id="friday"]:not(:checked) ~ .tab.fr,
+    input[id="saturday"]:not(:checked) ~ .tab.sa,
+    input[id="sunday"]:not(:checked) ~ .tab.su {
+        height: 2em;
+    }
+
+    input[id="week-list"]:checked ~ * label[for="week-list"],
+    input[id="monday"]:checked ~ * label[for="monday"],
+    input[id="tuesday"]:checked ~ * label[for="tuesday"],
+    input[id="wednesday"]:checked ~ * label[for="wednesday"],
+    input[id="thursday"]:checked ~ * label[for="thursday"],
+    input[id="friday"]:checked ~ * label[for="friday"],
+    input[id="saturday"]:checked ~ * label[for="saturday"],
+    input[id="sunday"]:checked ~ * label[for="sunday"] {
+        background-color: #cccccc;
+        /*border-top: 3px solid #f2992e;*/
+    }
+
+    @media (min-width: 600px) {
+        input[id="week-list"]:not(:checked) ~ .tab.all,
+        input[id="monday"]:not(:checked) ~ .tab.mo,
+        input[id="tuesday"]:not(:checked) ~ .tab.tu,
+        input[id="wednesday"]:not(:checked) ~ .tab.we,
+        input[id="thursday"]:not(:checked) ~ .tab.th,
+        input[id="friday"]:not(:checked) ~ .tab.fr,
+        input[id="saturday"]:not(:checked) ~ .tab.sa,
+        input[id="sunday"]:not(:checked) ~ .tab.su {
+            position: absolute;
+            overflow: hidden;
+            clip: rect(0 0 0 0);
+            height: 1px;
+            width: 1px;
+            margin: -1px;
+            padding: 0;
+            border: 0;
+        }
+
+        .tabs {
+            display: block;
+            margin: 0;
+            padding: 0;
+        }
+
+        .tabs label {
+            font-size: 18px;
+            display: block;
+            color: #212121;
+            margin-left: 5px;
+            margin-bottom: 5px;
+            background-color: #808080;
+            border: 1px solid #adadad;
+            border-radius: 10px;
+            float: left;
+            cursor: pointer;
+            //padding: 1%;
+            padding: .4em 0.2em;
+        }
+    }
+
+    /* QQ */
+    .content {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+        font-size: 23px;
+        /*list-style: none;*/
+    }
+
+    .qq a {
+        display: flex;
+        text-align: center;
+        text-decoration: none;
+        color: #4c5157;
+        /*margin-left: 10px;*/
+        /*margin-right: 10px;*/
+    }
+
+    /* TOOGLE */
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+        margin-right: 20px;
+    }
+
+    .switch input {
+        display: none;
+    }
+
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    input:checked + .slider {
+        background-color: #1d8dbf;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #27bcff;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+    .slider.round {
+        border-radius: 34px;
+    }
+
+    .slider.round:before {
+        border-radius: 50%;
+    }
